# vida-hs

./: vida.cabal
src/: Game.hs  Life.hs  Main.hs
