name:                vida
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/vida#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable vida
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Life
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.12.0.1 && < 0.13
                     , primitive >= 0.6.2.0 && < 0.7
